# SlimGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: obj2mesh.cpp
src/examples/: 1_example_gl_app.cpp  bolonga_color_full_nx.raw_image  bolonga_color_full_ny.raw_image  bolonga_color_full_nz.raw_image  bolonga_color_full_px.raw_image  bolonga_color_full_py.raw_image  bolonga_color_full_pz.raw_image  bolonga_irradiance_nx.raw_image  bolonga_irradiance_ny.raw_image  bolonga_irradiance_nz.raw_image  bolonga_irradiance_px.raw_image  bolonga_irradiance_py.raw_image  bolonga_irradiance_pz.raw_image  bolonga_radiance_nx.raw_image  bolonga_radiance_ny.raw_image  bolonga_radiance_nz.raw_image  bolonga_radiance_px.raw_image  bolonga_radiance_py.raw_image  bolonga_radiance_pz.raw_image  cathedral_color_full_nx.raw_image  cathedral_color_full_ny.raw_image  cathedral_color_full_nz.raw_image  cathedral_color_full_px.raw_image  cathedral_color_full_py.raw_image  cathedral_color_full_pz.raw_image  cathedral_color_nx.raw_image  cathedral_color_ny.raw_image  cathedral_color_nz.raw_image  cathedral_color_px.raw_image  cathedral_color_py.raw_image  cathedral_color_pz.raw_image  cathedral_irradiance_nx.raw_image  cathedral_irradiance_ny.raw_image  cathedral_irradiance_nz.raw_image  cathedral_irradiance_px.raw_image  cathedral_irradiance_py.raw_image  cathedral_irradiance_pz.raw_image  cathedral_radiance_nx.raw_image  cathedral_radiance_ny.raw_image  cathedral_radiance_nz.raw_image  (+16 more)
src/image_loaders/: bmp2image.cpp  bmp2texture.cpp  stb2image.cpp  stb_image_loader.h
src/slim/: app.h
(+61 files in other folders)
